--- a/poker/Rakefile
+++ b/poker/Rakefile
@@ -4,6 +4,6 @@ require 'spec/rake/spectask'
 desc "Run all examples"
 
 Spec::Rake::SpecTask.new('spec') do |t|
-  t.spec_files = FileList['spec/*.rb']
+  t.spec_files = FileList['spec/**/*.rb']
   t.rcov = true
 end
